variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: not found: type int
var nbBiscuit:int =0
              ^