variables.RunFour.scala.code
var nbBiscuit:int =0
while (nbBiscuit!=4){
  if (estSurBiscuit()){
    prendBiscuit()
  } else { 
  avance()
  }
}